to prevent the issue where ex.bottom part of the background image is cut because there is a text overflowing, use 'min-height:100vh' instead of 'height:100vh'.

--- a/styles.css
+++ b/styles.css
@@ -139,7 +139,7 @@ input {
     body {
         font-size: 1.125rem;
         display: flex;
-        height: 100vh;
+        min-height: 100vh;
     }
     h1 {
         font-size: 3.5rem;
